# Reproducible_Research

./: .dockerignore  .gitignore  Dockerfile  OUTLINE.md  README.md  TODO.md  docker-compose.yaml  pyproject.toml  requirements.txt
cross-section/: inorder.R
cross-section/data/: CCCD_avg2010_19.rds  CCCD_detailed_avg2010_19.rds  CCCD_growth_final.rds  Democracy_avg2010_19.rds  GDPpc_current_initial_Data.rds  GDPpc_initial_in_2015usd_Data.rds  cc_growth_yty.rds  edu_initial_Data.rds  fertility_Data.rds  gdp_growth_Data.rds  gov_exp_Data.rds  gov_exp_edu_Data.rds  gov_milit_exp_Data.rds  inflation_cpi_Data.rds  inflation_gdpdeflator_Data.rds  (+12 more)
docs/: _data_dictionary_cross_section.md  _data_dictionary_panel.md  ai_disclosure.md  contributions.md  cross_section_reproduction.md  cross_section_reproduction_results.md  data_dictionary.md  data_inventory.csv  limitations.md  methodology.md  panel_reproduction.md  panel_reproduction_results.md  phase0_audit.md  reproduction_contract.md  reproduction_results.md  run_instructions.md  source_annotations.md
helpers/: rds_to_csv.py
notebooks/: final_presentation_report.ipynb
outputs/: README.md
panel/: inorder_panel.R
report/: _quarto.yml  report.qmd  slides.qmd  slides_visual.qmd
scripts/: audit_phase0.py  demo.py  generate_report.py  inventory_data.py  run_all.py  run_cross_section.py  run_cross_section_data.py  run_panel.py  run_panel_prep.py  validate_project.py
tests/: test_cross_section.py  test_docker_reproducibility.py  test_panel.py  test_panel_analysis.py  test_reviewer_documentation.py  test_validation.py
(+79 files in other folders)
