[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reproducible-research-lic-fii"
version = "0.1.0"
description = "Python reproduction pipeline for the constitutional compliance and growth project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "ipykernel>=6.29,<7",
    "linearmodels>=6,<7",
    "lxml>=5,<7",
    "matplotlib>=3.8,<4",
    "nbclient>=0.10,<1",
    "nbformat>=5.10,<6",
    "numpy>=1.26,<3",
    "packaging>=24,<27",
    "pandas>=2.2,<3",
    "PyYAML>=6,<7",
    "pyreadr>=0.5,<0.6",
    "scipy>=1.11,<2",
    "seaborn>=0.13,<0.14",
    "statsmodels>=0.14,<0.15",
]

[project.optional-dependencies]
dev = [
    "black>=24,<26",
    "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "scripts", "helpers"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
